<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/addNew"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCoords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCoord" />

        <TextView
            android:id="@+id/tvCoordsOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF00FF00"
            android:padding="4dp"
            android:text="@string/addOk"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/addTitle"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addWarn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/addDesc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addWarn"
        android:maxHeight="200dp"
        android:minHeight="100dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addPhoto" />

        <TextView
            android:id="@+id/tvPhotoOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF00FF00"
            android:padding="4dp"
            android:text="@string/addOk"
            android:textSize="20sp"
            android:visibility="invisible" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuAdd" />

</LinearLayout>
